--- a/Pallo.Roberto.MetodosNumericosAct01.ipynb
+++ b/Pallo.Roberto.MetodosNumericosAct01.ipynb
@@ -5,8 +5,8 @@
    "id": "8b04c691",
    "metadata": {},
    "source": [
-    "   # Universidad de las Fuerzas Armadas\n",
-    "   ## Métodos Numéricos\n",
+    "  # <center> Universidad de las Fuerzas Armadas</center>\n",
+    "  # <center> Métodos Numéricos</center>\n",
     "   ## Actividad n.-1\n",
     "   ## --------------------------------------------------------------------------------------------------------------------------------\n",
     "   ### Apellidos: **Pallo Yautibug**\n",
@@ -23,7 +23,9 @@
     "## Ejercicios\n",
     " **1.-** Cree un repositorio en GitHub para los proyectos que se desarrollarán en el semestre. El repositorio\n",
     "debe estar asociado a su correo institucional. Los ejercicios de la actividad deben estar en el\n",
-    "repositorio."
+    "repositorio.\n",
+    "Envio el link del Repositorio Github\n",
+    "https://github.com/RobertoPallotech/Metodos-Numericos.git"
    ]
   },
   {
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 119,
    "id": "8e5faabe",
    "metadata": {},
    "outputs": [
@@ -55,7 +57,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 120,
    "id": "308f7dcb",
    "metadata": {},
    "outputs": [
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 121,
    "id": "7d1c5c96",
    "metadata": {},
    "outputs": [],
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 122,
    "id": "29083aad",
    "metadata": {},
    "outputs": [],
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 123,
    "id": "0918ebd7",
    "metadata": {},
    "outputs": [
@@ -1152,12 +1154,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d6b1b83",
+   "metadata": {},
+   "source": [
+    "Sea la formula de la serie de Taylor igual a:\n",
+    "<h3>$p(x)$=$f(x)$+$f^{´}(x-x_0)$ + $\\frac{ f^{''}(x_0)(x-x_0)^{2}}{2}$ + $\\frac{ f^{'''}(x_0)(x-x_0)^{3}}{3!}$ + $\\frac{ f^{''''}(x_0)(x-x_0)^{4}}{4!}$ +...+ $\\sum_{n=0}^{\\infty}$=$\\frac{ f^{n}(x_0)(x-x_0)^{n}}{n!}$</h3>\n",
+    "Entonces vamos a calcular las  3 primeras derivadas de\n",
+    "f(x) =$\\sqrt{x^{2}+2x+1}$\n",
+    "<h3>$f^{´}$=$\\frac{1}{2\\sqrt{x^{2}+2x+1}}\\cdot(x^{2}+2x+1)^{'};$</h3>\n",
+    "<h3>$f^{´}$=$\\frac{(2x+2)}{2\\sqrt{x^{2}+2x+1}};$</h3>\n",
+    "<h3>$f^{''}$=$\\frac{1}{2}\\cdot\\frac{(2x+2)^{´}\\sqrt{x^{2}+2x+1}-(2x+2)(\\sqrt{x^{2}+2x+1})^{´}}{(\\sqrt{x^{2}+2x+1})^{2}};$</h3>\n",
+    "<h3>$f^{''}$=$\\frac{1}{2}\\cdot\\frac{2\\sqrt{x^{2}+2x+1}-(2x+2)}{(x+1)^{2}} = 0;$</h3>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "081d68b1",
+   "metadata": {},
+   "source": [
+    "Nos podemos dar cuenta que a partir $f^{''}$ el resultado resulta ser cero y la derivada de cero es cero por lo tanto no hace falta calcular más derivadas.\n",
+    "Evaluamos f(2.045) en:\n",
+    "<h3>$f(2.045) =\\sqrt{(2.045)^{2}+2(2.045)+1};$</h3>\n",
+    "<h3>$f(2.045) =\\sqrt{(4.18203)+(4.09000)+1};$</h3>\n",
+    "<h3>$f(2.045) ={3.04500}$</h3>\n",
+    "<h3></h3>Evaluamos f(2.045) en:\n",
+    "<h3>$f(2.045)^{´}$=$\\frac{2(2.045)+2}{2\\sqrt{(2.045)^{2}+2(2.045)+1}};$</h3>\n",
+    "<h3>$f(2.045)^{´}$=$\\frac{2(2.045)+2}{2\\sqrt{(2.045)^{2}+2(2.045)+1}};$</h3>\n",
+    "<h3>$f(2.045)^{´}$=$\\frac{6,09000}{6,09000};$</h3>\n",
+    "<h3>$f(2.045)^{´} = 1;$</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ae96f5c",
+   "metadata": {},
+   "source": [
+    "Reemplazamos los valores obtenidos en la serie de Taylor \n",
+    "<h3>$p(x)= 3.04500 + 1\\cdot(x-2.045) + 0 $</h3>\n",
+    "<h3>$p(x)= 1 + x $</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c3ac7f9",
+   "metadata": {},
+   "source": [
+    "Calculamos el polinomio con $x=2,04500$\n",
+    "<h3>$p(2.04500)= 1 + 2.04500 $</h3>\n",
+    "<h3>$p(2.04500)= 3.04500 $</h3>\n",
+    "<h3></h3>Calculamos el Resto:\n",
+    "<h3>$R(1)= f(x)-p(x) $</h3>\n",
+    "<h3>$R(1)=3.04500-3.04500 $</h3>\n",
+    "<h3>$R(1)=0<0,00005 $</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2d11654",
+   "metadata": {},
+   "source": [
+    "5. Calcule el error relativo, error absoluto, el error porcentual y las cifras signicativas para los siguientes\n",
+    "casos:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cbf9e5c",
+   "metadata": {},
+   "source": [
+    "A continuacón desarrollaremos los ejercicios solicitados:\n",
+    "$x=0.005429, x_(aprox)=0.00543$\n",
+    "<h3>Error Absoluto</h3>\n",
+    "<h3>$E_(abs)=|V_(exacto) - V_(aprox)|;$<h3>\n",
+    "<h3>$E_(abs)=|0.005429- 0.00543|;$<h3>\n",
+    "<h3>$E_(abs)=0,000001$<h3>\n",
+    "<h3>$0,000001$ una cifra significativa<h3>\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be978b06",
+   "metadata": {},
+   "source": [
+    "<h3>Error Relativo</h3>\n",
+    "<h3>$E_(relat)=\\frac{|E_(abs)|}{|V_(exacto)|};$<h3>\n",
+    "<h3>$E_(relat)=\\frac{0,000001}{0.005429};$<h3>\n",
+    "<h3>$E_(relat)=0.0001841$<h3>\n",
+    "<h3>$0.0001841$ cuatro cifras significativa<h3>\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bee22f6",
+   "metadata": {},
+   "source": [
+    "<h3>Error Porcentual</h3>\n",
+    "<h3>$E_(porcentual)=E_(relat)x100;$<h3>\n",
+    "<h3>$E_(porcentual)=0.0001841 x 100;$<h3>\n",
+    "<h3>$0.01841$% cuatro cifras significativa<h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1faaba27",
+   "metadata": {},
+   "source": [
+    "A continuación desarrollaremos los ejercicios solicitados:\n",
+    "$x=189.3478, x_(aprox)=18.93478$\n",
+    "<h3>Error Absoluto</h3>\n",
+    "<h3>$E_(abs)=|V_(exacto) - V_(aprox)|;$<h3>\n",
+    "<h3>$E_(abs)=|189.3478- 18.93478|;$<h3>\n",
+    "<h3>$E_(abs)=170.4132$<h3>\n",
+    "<h3>$170.4132$ una cifra significativa<h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a4b2da1",
+   "metadata": {},
+   "source": [
+    "<h3>Error Relativo</h3>\n",
+    "<h3>$E_(relat)=\\frac{|E_(abs)|}{|V_(exacto)|};$<h3>\n",
+    "<h3>$E_(relat)=\\frac{170.4132}{189.3478};$<h3>\n",
+    "<h3>$E_(relat)=0.9$<h3>\n",
+    "<h3>$0.9$ cuatro cifras significativa<h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1adf10ac",
+   "metadata": {},
+   "source": [
+    "<h3>Error Porcentual</h3>\n",
+    "<h3>$E_(porcentual)=E_(relat)x100;$<h3>\n",
+    "<h3>$E_(porcentual)=0.9 x 100;$<h3>\n",
+    "<h3>$90$% cuatro cifras significativa<h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fe6a952",
+   "metadata": {},
+   "source": [
+    "A continuación desarrollaremos los ejercicios solicitados:\n",
+    "$x=4.367, x_(aprox)=4.3689$\n",
+    "<h3>Error Absoluto</h3>\n",
+    "<h3>$E_(abs)=|V_(exacto) - V_(aprox)|;$<h3>\n",
+    "<h3>$E_(abs)=|4.367- 4.3689|;$<h3>\n",
+    "<h3>$E_(abs)=0.0019$<h3>\n",
+    "<h3>$0.0019$ una cifra significativa<h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efcbaf45",
+   "metadata": {},
+   "source": [
+    "<h3>Error Relativo</h3>\n",
+    "<h3>$E_(relat)=\\frac{|E_(abs)|}{|V_(exacto)|};$<h3>\n",
+    "<h3>$E_(relat)=\\frac{0.0019}{4.367};$<h3>\n",
+    "<h3>$E_(relat)=0.000435$<h3>\n",
+    "<h3>$0.000435$ cuatro cifras significativa<h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5a2fc97",
+   "metadata": {},
+   "source": [
+    "<h3>Error Porcentual</h3>\n",
+    "<h3>$E_(porcentual)=E_(relat)x100;$<h3>\n",
+    "<h3>$E_(porcentual)=0.000435 x 100;$<h3>\n",
+    "<h3>$0.0435$% cuatro cifras significativa<h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43a2ca6e",
+   "metadata": {},
+   "source": [
+    "\n",
+    "6.Diseñe un código que encuentre el $ Sen(\\frac{pi}{3})$ a través del desarrollo de Taylor, truncar cuando n = 50."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80399f9e",
+   "metadata": {},
+   "source": [
+    "A continuación recordaremos la función sen(x) en forma de la sumatoria con respecto a k:\n",
+    "<h3> $sen(x)=\\sum_{k=0}^{k=n-1}={(-1)}^{k}\\cdot\\frac {x^{(2k + 1)}}{(2k+1)!}$</h3>\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e03ea477",
+   "execution_count": 125,
+   "id": "375d806a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "# Datos:declaración de Variables\n",
+    "x=np.pi/3\n",
+    "#Número de veces a truncar un numero:\n",
+    "#Definimos una variable que sea la que guarde la suma de la serie: \n",
+    "n=int(2)\n",
+    "sumatoria=0\n",
+    "#Ciclo para repetir y acumular el valor de las sumas de la serie de Taylor\n",
+    "for k in range(1,n+1):\n",
+    "    sumatoria=sumatoria + (-1)**(k+1)*x**(2*k+1)/np.math.factorial(2*k+1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "52beb9fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.18090226740976284\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sumatoria)"
+   ]
   }
  ],
  "metadata": {
