--- a/Pallo.Roberto.MetodosNumericosAct01.ipynb
+++ b/Pallo.Roberto.MetodosNumericosAct01.ipynb
@@ -24,8 +24,7 @@
     " **1.-** Cree un repositorio en GitHub para los proyectos que se desarrollarán en el semestre. El repositorio\n",
     "debe estar asociado a su correo institucional. Los ejercicios de la actividad deben estar en el\n",
     "repositorio.\n",
-    "Envio el link del Repositorio Github\n",
-    "https://github.com/RobertoPallotech/Metodos-Numericos.git"
+    "Envio el link del Repositorio Github: https://github.com/RobertoPallotech/Metodos-Numericos.git"
    ]
   },
   {
@@ -1159,12 +1158,12 @@
    "metadata": {},
    "source": [
     "Sea la formula de la serie de Taylor igual a:\n",
-    "<h3>$p(x)$=$f(x)$+$f^{´}(x-x_0)$ + $\\frac{ f^{''}(x_0)(x-x_0)^{2}}{2}$ + $\\frac{ f^{'''}(x_0)(x-x_0)^{3}}{3!}$ + $\\frac{ f^{''''}(x_0)(x-x_0)^{4}}{4!}$ +...+ $\\sum_{n=0}^{\\infty}$=$\\frac{ f^{n}(x_0)(x-x_0)^{n}}{n!}$</h3>\n",
+    "<h3>$p(x)$=$f(x)$+$f^{'}(x-x_0)$ + $\\frac{ f^{''}(x_0)(x-x_0)^{2}}{2}$ + $\\frac{ f^{'''}(x_0)(x-x_0)^{3}}{3!}$ + $\\frac{ f^{''''}(x_0)(x-x_0)^{4}}{4!}$ +...+ $\\sum_{n=0}^{\\infty}$=$\\frac{ f^{n}(x_0)(x-x_0)^{n}}{n!}$</h3>\n",
     "Entonces vamos a calcular las  3 primeras derivadas de\n",
     "f(x) =$\\sqrt{x^{2}+2x+1}$\n",
-    "<h3>$f^{´}$=$\\frac{1}{2\\sqrt{x^{2}+2x+1}}\\cdot(x^{2}+2x+1)^{'};$</h3>\n",
-    "<h3>$f^{´}$=$\\frac{(2x+2)}{2\\sqrt{x^{2}+2x+1}};$</h3>\n",
-    "<h3>$f^{''}$=$\\frac{1}{2}\\cdot\\frac{(2x+2)^{´}\\sqrt{x^{2}+2x+1}-(2x+2)(\\sqrt{x^{2}+2x+1})^{´}}{(\\sqrt{x^{2}+2x+1})^{2}};$</h3>\n",
+    "<h3>$f^{'}$=$\\frac{1}{2\\sqrt{x^{2}+2x+1}}\\cdot(x^{2}+2x+1)^{'};$</h3>\n",
+    "<h3>$f^{'}$=$\\frac{(2x+2)}{2\\sqrt{x^{2}+2x+1}};$</h3>\n",
+    "<h3>$f^{''}$=$\\frac{1}{2}\\cdot\\frac{(2x+2)^{'}\\sqrt{x^{2}+2x+1}-(2x+2)(\\sqrt{x^{2}+2x+1})^{'}}{(\\sqrt{x^{2}+2x+1})^{2}};$</h3>\n",
     "<h3>$f^{''}$=$\\frac{1}{2}\\cdot\\frac{2\\sqrt{x^{2}+2x+1}-(2x+2)}{(x+1)^{2}} = 0;$</h3>\n"
    ]
   },
@@ -1179,10 +1178,10 @@
     "<h3>$f(2.045) =\\sqrt{(4.18203)+(4.09000)+1};$</h3>\n",
     "<h3>$f(2.045) ={3.04500}$</h3>\n",
     "<h3></h3>Evaluamos f(2.045) en:\n",
-    "<h3>$f(2.045)^{´}$=$\\frac{2(2.045)+2}{2\\sqrt{(2.045)^{2}+2(2.045)+1}};$</h3>\n",
-    "<h3>$f(2.045)^{´}$=$\\frac{2(2.045)+2}{2\\sqrt{(2.045)^{2}+2(2.045)+1}};$</h3>\n",
-    "<h3>$f(2.045)^{´}$=$\\frac{6,09000}{6,09000};$</h3>\n",
-    "<h3>$f(2.045)^{´} = 1;$</h3>"
+    "<h3>$f(2.045)^{'}$=$\\frac{2(2.045)+2}{2\\sqrt{(2.045)^{2}+2(2.045)+1}};$</h3>\n",
+    "<h3>$f(2.045)^{'}$=$\\frac{2(2.045)+2}{2\\sqrt{(2.045)^{2}+2(2.045)+1}};$</h3>\n",
+    "<h3>$f(2.045)^{'}$=$\\frac{6,09000}{6,09000};$</h3>\n",
+    "<h3>$f(2.045)^{'} = 1;$</h3>"
    ]
   },
   {
@@ -1211,7 +1210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5263d2e6",
+   "id": "068da344",
    "metadata": {},
    "source": [
     "5. Calcule el error relativo, error absoluto, el error porcentual y las cifras signicativas para los siguientes\n",
@@ -1220,7 +1219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f902d146",
+   "id": "1278c0a8",
    "metadata": {},
    "source": [
     "A continuacón desarrollaremos los ejercicios solicitados:\n",
@@ -1235,7 +1234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89bd8d3d",
+   "id": "4f4d0d72",
    "metadata": {},
    "source": [
     "<h3>Error Relativo</h3>\n",
@@ -1248,7 +1247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1d5bbe1",
+   "id": "e3f869f1",
    "metadata": {},
    "source": [
     "<h3>Error Porcentual</h3>\n",
@@ -1259,7 +1258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "605e6692",
+   "id": "3974f19e",
    "metadata": {},
    "source": [
     "A continuación desarrollaremos los ejercicios solicitados:\n",
@@ -1273,7 +1272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b75ea20",
+   "id": "79b5befd",
    "metadata": {},
    "source": [
     "<h3>Error Relativo</h3>\n",
@@ -1285,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "858a5778",
+   "id": "fd002b02",
    "metadata": {},
    "source": [
     "<h3>Error Porcentual</h3>\n",
@@ -1296,7 +1295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2074dd35",
+   "id": "f74585c6",
    "metadata": {},
    "source": [
     "A continuación desarrollaremos los ejercicios solicitados:\n",
@@ -1310,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f09ba50b",
+   "id": "ff7be41f",
    "metadata": {},
    "source": [
     "<h3>Error Relativo</h3>\n",
@@ -1322,7 +1321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62ea06dd",
+   "id": "7fa86aab",
    "metadata": {},
    "source": [
     "<h3>Error Porcentual</h3>\n",
@@ -1373,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "ccbf7135",
+   "id": "1f90438f",
    "metadata": {},
    "outputs": [
     {
