--- a/Desarrollo de Función no lineal Foro 1.ipynb
+++ b/Desarrollo de Función no lineal Foro 1.ipynb
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 5,
    "id": "45e93631",
    "metadata": {},
    "outputs": [],
@@ -1139,7 +1139,7 @@
     "import numpy as np\n",
     "#Definimos la funcion\n",
     "def f(x):\n",
-    "    return 3*np.cos(x)*np.cos(x)-np.cos(3*x)\n",
+    "    return x**4-x-8\n",
     "#Definir la funcion para la secante  \n",
     "def secante(a, b, tol):\n",
     "    n = 0\n",
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 6,
    "id": "d6035d1c",
    "metadata": {},
    "outputs": [
@@ -1189,15 +1189,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raiz de la función = 1.570796343608094\n",
-      "No. de interacciones=  6\n"
+      "No posee raiz en el intervalo\n"
      ]
     }
    ],
    "source": [
     "# Inicialización de datos como extremos del intervalo y tolerancia \n",
-    "x1 = 0;\n",
-    "x2 = 2;\n",
+    "x1 = 10;\n",
+    "x2 = 20;\n",
     "tol = 0.000001;\n",
     "secante(x1, x2, tol);"
    ]
