--- a/Pallo.Roberto.MetodosNumericosAct02.ipynb
+++ b/Pallo.Roberto.MetodosNumericosAct02.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d96388d7",
+   "id": "fcc62d3d",
    "metadata": {},
    "source": [
     "Para encontrar el punto de intersección entre estas dos variables vamos a utilizar el Metodo de Newton:<br />\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7ae4e47",
+   "id": "e475d7d0",
    "metadata": {},
    "source": [
     "Vamos a comenzar con la segunda interacción; donde x_a=2<br />\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e59d6cd3",
+   "id": "43a5b452",
    "metadata": {},
    "source": [
     "Reemplazamos $X_2=2,204)$ en valor en $f(x) = 3 - x$:<br />\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67af3148",
+   "id": "68678535",
    "metadata": {},
    "source": [
     "Respuesta:el punto de interseccion se encuentra en las coordenadas:<br />\n",
@@ -354,26 +354,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 7,
    "id": "f079bb1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "A1 = np.array([[1,6,5],[0,1,8],[0,0,1]])\n",
+    "A = np.array([[1,6,5],[0,1,8],[0,0,1]])\n",
     "\n",
-    "B1 = np.array([[7],\n",
+    "B = np.array([[7],\n",
     "              [9],\n",
     "              [6]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 8,
    "id": "cfd68843",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ultfil' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-293809b9ce3d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# numero de filas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# vector solucion\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0multfil\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mpivote\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mAB\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ultfil' is not defined"
+     ]
+    }
+   ],
    "source": [
     "n=len(A) # numero de filas\n",
     "x=np.zeros(n) # vector solucion\n",
@@ -389,20 +401,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 9,
    "id": "faa43fb8",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matriz aumentada:\n",
-      "[[1 6 2 4]\n",
-      " [0 1 8 8]\n",
-      " [0 0 1 5]]\n"
+      "Matriz aumentada:\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'AB11' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-89df20120779>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Matriz aumentada:'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mAB11\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'AB11' is not defined"
      ]
     }
    ],
@@ -413,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 10,
    "id": "c91f7ff9",
    "metadata": {
     "scrolled": true
@@ -424,7 +442,7 @@
      "output_type": "stream",
      "text": [
       "solución de X: \n",
-      "[151  50  19  17]\n"
+      "[0. 0. 0.]\n"
      ]
     }
    ],
@@ -522,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 14,
    "id": "ec788314",
    "metadata": {},
    "outputs": [],
@@ -538,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 15,
    "id": "3b3a07f7",
    "metadata": {
     "scrolled": true
@@ -552,10 +570,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 18,
    "id": "6eeed7d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-2351113cce3a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# elimina hacia atras\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0multfil\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0multcolum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mm\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0multfil\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mpivot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mAB\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'm' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# elimina hacia atras\n",
     "ultfil = n-1\n",
@@ -573,19 +603,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 17,
    "id": "a17de5ab",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "solución de X: \n",
-      "[[37]\n",
-      " [25]\n",
-      " [19]\n",
-      " [17]]\n"
+      "solución de X: \n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-c7e13564e589>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'solución de X: '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
      ]
     }
    ],
@@ -605,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 19,
    "id": "fea13970",
    "metadata": {},
    "outputs": [],
@@ -623,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 20,
    "id": "8fe6611d",
    "metadata": {},
    "outputs": [],
@@ -638,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 21,
    "id": "b6c1bd15",
    "metadata": {},
    "outputs": [],
@@ -651,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 22,
    "id": "6a85cd77",
    "metadata": {},
    "outputs": [],
@@ -673,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 23,
    "id": "7485c39e",
    "metadata": {},
    "outputs": [],
@@ -690,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 24,
    "id": "4d6f2cdb",
    "metadata": {},
    "outputs": [],
@@ -712,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 25,
    "id": "2017723a",
    "metadata": {
     "scrolled": true
@@ -737,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 26,
    "id": "48ed913f",
    "metadata": {
     "scrolled": false
@@ -762,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 27,
    "id": "6c3616cf",
    "metadata": {},
    "outputs": [
@@ -785,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 28,
    "id": "7fed9a9d",
    "metadata": {},
    "outputs": [
@@ -808,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 29,
    "id": "7f399916",
    "metadata": {
     "scrolled": true
@@ -841,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 509,
    "id": "66cb9a42",
    "metadata": {},
    "outputs": [
