Foro segundo Parcial

--- a/Pallo.Roberto.MetodosNumericosAct03.ipynb
+++ b/Pallo.Roberto.MetodosNumericosAct03.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 2,
    "id": "7a51bb6b",
    "metadata": {},
    "outputs": [
@@ -520,11 +520,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "id": "5856d4e1",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -580,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 10,
    "id": "6a94baef",
    "metadata": {},
    "outputs": [],
@@ -605,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 11,
    "id": "d3e01c72",
    "metadata": {},
    "outputs": [
@@ -613,30 +611,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteracion  0 [0. 0. 0. 0.]\n",
-      "Iteracion en x  1 [ 0.47142857 -0.75232143  1.22964286 -0.77327381]\n",
-      "Iteracion en x  2 [ 0.97876616 -0.9594985   1.03354611 -0.99388621]\n",
-      "Iteracion en x  3 [ 0.99910892 -1.00224633  0.99808163 -1.00146   ]\n",
-      "Iteracion en x  4 [ 1.0005995  -1.0002593   0.9999552  -1.00017711]\n",
-      "Iteracion en x  5 [ 1.00002942 -1.00002682  0.99996387 -1.00000953]\n",
-      "Iteracion en x  6 [ 0.99999859 -0.99999975  1.0000006  -0.99999833]\n",
-      "Iteracion en x  7 [ 0.99999967 -0.99999952  1.00000031 -0.99999981]\n",
-      "Iteracion en x  8 [ 0.99999995 -0.99999999  1.00000001 -0.99999999]\n",
-      "Iteracion en x  9 [ 1. -1.  1. -1.]\n",
-      "Valor aproximado buscado: [ 1. -1.  1. -1.]\n"
+      "Iteracion  0 [0. 0. 0.]\n",
+      "Iteracion en x  1 [-0.25     -1.4375    2.015625]\n",
+      "Iteracion en x  2 [  2.265625     6.4921875  -11.86132812]\n",
+      "Iteracion en x  3 [-11.61132813 -42.07714844  73.13500977]\n",
+      "Iteracion en x  4 [  73.38500977  255.41003418 -447.46755981]\n",
+      "Iteracion en x  5 [ -447.21755981 -1566.69895935  2741.22317886]\n",
+      "Iteracion en x  6 [  2741.47317886   9593.71862602 -16789.50759554]\n",
+      "Iteracion en x  7 [-16789.25759554 -58763.83908439 102836.21839768]\n",
+      "Iteracion en x  8 [ 102836.46839768  359926.20189187 -629871.35331077]\n",
+      "Iteracion en x  9 [ -629871.10331077 -2204550.2990877   3857962.52340348]\n",
+      "Iteracion en x  10 [  3857962.77340348  13502868.26941217 -23630019.9714713 ]\n",
+      "Iteracion en x  11 [-2.36300197e+07 -8.27050705e+07  1.44733873e+08]\n",
+      "Iteracion en x  12 [ 1.44733873e+08  5.06568554e+08 -8.86494970e+08]\n",
+      "Iteracion en x  13 [-8.86494970e+08 -3.10273240e+09  5.42978169e+09]\n",
+      "Iteracion en x  14 [ 5.42978169e+09  1.90042359e+10 -3.32574129e+10]\n",
+      "Iteracion en x  15 [-3.32574129e+10 -1.16400945e+11  2.03701654e+11]\n",
+      "Iteracion en x  16 [ 2.03701654e+11  7.12955789e+11 -1.24767263e+12]\n",
+      "Iteracion en x  17 [-1.24767263e+12 -4.36685421e+12  7.64199486e+12]\n",
+      "Iteracion en x  18 [ 7.64199486e+12  2.67469820e+13 -4.68072185e+13]\n",
+      "Iteracion en x  19 [-4.68072185e+13 -1.63825265e+14  2.86694213e+14]\n",
+      "Iteracion en x  20 [ 2.86694213e+14  1.00342975e+15 -1.75600206e+15]\n",
+      "Valor aproximado buscado: [ 2.86694213e+14  1.00342975e+15 -1.75600206e+15]\n"
      ]
     }
    ],
    "source": [
     "# inicialización de matriz y vector\n",
-    "A = np.array([[7., 1., -1., 2.], \n",
-    "              [1., 8., 0., -2.], \n",
-    "              [-1., 0., 4., -1.], \n",
-    "              [2., -2., -1., 6.]])\n",
-    "b = np.array([3.0, -5.0, 4.0, -3.0])\n",
-    "w = 1.1\n",
-    "k=9\n",
-    "print(\"Valor aproximado buscado:\", FUNCION_SOR(A,b,w,k))"
+    "A = np.array([[4., 7., 0.], \n",
+    "              [7., -4., 7.], \n",
+    "              [0., 7., 4.]])\n",
+    "b = np.array([-1.0, 4.0, -2.0])\n",
+    "w = 1\n",
+    "k=20\n",
+    "print(\"Valor aproximado buscado:\", FUNCION_SOR(A,b,w,k))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
